# elpres

./: .dockerignore  .gitignore  Dockerfile  README.md  build  pyproject.toml  run
elpres/: __init__.py  engine.py  main.py  models.py  server.py
static/: app.js  game.html  index.html  style.css
